// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`HugoSiteStack Snapshot Tests snapshot matches default configuration 1`] = `
{
  "Mappings": {
    "AWSCloudFrontPartitionHostedZoneIdMap": {
      "aws": {
        "zoneId": "Z2FDTNDATAQYW2",
      },
      "aws-cn": {
        "zoneId": "Z3RFFRIM2A3IF5",
      },
    },
  },
  "Outputs": {
    "CloudFrontDistributionId": {
      "Description": "CloudFront distribution ID",
      "Export": {
        "Name": "TestBlog-CloudFrontDistributionId",
      },
      "Value": {
        "Ref": "blogSiteDistributionF02D14DC",
      },
    },
    "GitHubActionsRoleArn": {
      "Description": "IAM Role ARN for GitHub Actions to assume",
      "Export": {
        "Name": "TestBlog-GitHubActionsRoleArn",
      },
      "Value": {
        "Fn::GetAtt": [
          "blogGitHubRoleGitHubActionsDeployRoleCBD26A8C",
          "Arn",
        ],
      },
    },
    "S3BucketName": {
      "Description": "S3 bucket name for site content",
      "Export": {
        "Name": "TestBlog-S3BucketName",
      },
      "Value": {
        "Ref": "blogSiteBucket6627388D",
      },
    },
    "SiteUrl": {
      "Description": "Site URL",
      "Value": "https://blog.example.com",
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F": {
      "DependsOn": [
        "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-us-east-1",
          "S3Key": "faa95a81ae7d7373f3e1f242268f904eb748d8d0fdd306e8a6fe515a1905a7d6.zip",
        },
        "Description": {
          "Fn::Join": [
            "",
            [
              "Lambda function for auto-deleting objects in ",
              {
                "Ref": "blogSiteLogBucketFC84A3A3",
              },
              " S3 bucket.",
            ],
          ],
        },
        "Handler": "index.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "blogGitHubRoleGitHubActionsDeployRoleCBD26A8C": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRoleWithWebIdentity",
              "Condition": {
                "StringEquals": {
                  "token.actions.githubusercontent.com:aud": "sts.amazonaws.com",
                },
                "StringLike": {
                  "token.actions.githubusercontent.com:sub": "repo:testOrg/blog:ref:refs/heads/main",
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Federated": "arn:aws:iam::123456789012:oidc-provider/token.actions.githubusercontent.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "Allows GitHub Actions in testOrg/blog to deploy Hugo sites",
        "RoleName": "github-actions-blog-deploy",
      },
      "Type": "AWS::IAM::Role",
    },
    "blogGitHubRoleGitHubActionsDeployRoleDefaultPolicyA113B7C2": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObject",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "blogSiteBucket6627388D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "blogSiteBucket6627388D",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "cloudfront:CreateInvalidation",
                "cloudfront:GetInvalidation",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:cloudfront::123456789012:distribution/",
                    {
                      "Ref": "blogSiteDistributionF02D14DC",
                    },
                  ],
                ],
              },
              "Sid": "AllowCloudFrontInvalidation",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "blogGitHubRoleGitHubActionsDeployRoleDefaultPolicyA113B7C2",
        "Roles": [
          {
            "Ref": "blogGitHubRoleGitHubActionsDeployRoleCBD26A8C",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "blogSiteBucket6627388D": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "AccessControl": "Private",
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "BucketName": "blog.example.com",
        "Tags": [
          {
            "Key": "aws-cdk:auto-delete-objects",
            "Value": "true",
          },
        ],
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Delete",
    },
    "blogSiteBucketAutoDeleteObjectsCustomResource849DD340": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "blogSiteBucketPolicy30243FB0",
      ],
      "Properties": {
        "BucketName": {
          "Ref": "blogSiteBucket6627388D",
        },
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F",
            "Arn",
          ],
        },
      },
      "Type": "Custom::S3AutoDeleteObjects",
      "UpdateReplacePolicy": "Delete",
    },
    "blogSiteBucketPolicy30243FB0": {
      "Properties": {
        "Bucket": {
          "Ref": "blogSiteBucket6627388D",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:PutBucketPolicy",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::GetAtt": [
                    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
                    "Arn",
                  ],
                },
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "blogSiteBucket6627388D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "blogSiteBucket6627388D",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "s3:GetObject",
              "Condition": {
                "StringEquals": {
                  "AWS:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":cloudfront::",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":distribution/",
                        {
                          "Ref": "blogSiteDistributionF02D14DC",
                        },
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "cloudfront.amazonaws.com",
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "blogSiteBucket6627388D",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "blogSiteCertificate821A5B4B": {
      "Properties": {
        "DomainName": "blog.example.com",
        "DomainValidationOptions": [
          {
            "DomainName": "blog.example.com",
            "HostedZoneId": "DUMMY",
          },
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "TestBlog/blogSite/Certificate",
          },
        ],
        "ValidationMethod": "DNS",
      },
      "Type": "AWS::CertificateManager::Certificate",
    },
    "blogSiteCloudfrontRedirectRole97D68716": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "edgelambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "blogSiteDistributionF02D14DC": {
      "Properties": {
        "DistributionConfig": {
          "Aliases": [
            "blog.example.com",
          ],
          "CustomErrorResponses": [
            {
              "ErrorCode": 404,
              "ResponseCode": 200,
              "ResponsePagePath": "/404.html",
            },
          ],
          "DefaultCacheBehavior": {
            "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
            "Compress": true,
            "LambdaFunctionAssociations": [
              {
                "EventType": "origin-request",
                "LambdaFunctionARN": {
                  "Ref": "blogSitecloudfrontredirectCurrentVersion30857C2B3f462d5bf3473516bc7a34a95cf6fa5f",
                },
              },
            ],
            "TargetOriginId": "TestBlogblogSiteDistributionOrigin1DF526AB8",
            "ViewerProtocolPolicy": "allow-all",
          },
          "Enabled": true,
          "HttpVersion": "http2",
          "IPV6Enabled": true,
          "Logging": {
            "Bucket": {
              "Fn::GetAtt": [
                "blogSiteLogBucketFC84A3A3",
                "RegionalDomainName",
              ],
            },
          },
          "Origins": [
            {
              "DomainName": {
                "Fn::GetAtt": [
                  "blogSiteBucket6627388D",
                  "RegionalDomainName",
                ],
              },
              "Id": "TestBlogblogSiteDistributionOrigin1DF526AB8",
              "OriginAccessControlId": {
                "Fn::GetAtt": [
                  "blogSiteDistributionOrigin1S3OriginAccessControlBBF33E90",
                  "Id",
                ],
              },
              "S3OriginConfig": {
                "OriginAccessIdentity": "",
              },
            },
          ],
          "PriceClass": "PriceClass_100",
          "ViewerCertificate": {
            "AcmCertificateArn": {
              "Ref": "blogSiteCertificate821A5B4B",
            },
            "MinimumProtocolVersion": "TLSv1.2_2021",
            "SslSupportMethod": "sni-only",
          },
        },
      },
      "Type": "AWS::CloudFront::Distribution",
    },
    "blogSiteDistributionOrigin1S3OriginAccessControlBBF33E90": {
      "Properties": {
        "OriginAccessControlConfig": {
          "Name": "TestBlogblogSiteDistributionOrigin1S3OriginAccessControlAF40440E",
          "OriginAccessControlOriginType": "s3",
          "SigningBehavior": "always",
          "SigningProtocol": "sigv4",
        },
      },
      "Type": "AWS::CloudFront::OriginAccessControl",
    },
    "blogSiteLogBucketAutoDeleteObjectsCustomResource32867FB8": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "blogSiteLogBucketPolicyBFCDB293",
      ],
      "Properties": {
        "BucketName": {
          "Ref": "blogSiteLogBucketFC84A3A3",
        },
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F",
            "Arn",
          ],
        },
      },
      "Type": "Custom::S3AutoDeleteObjects",
      "UpdateReplacePolicy": "Delete",
    },
    "blogSiteLogBucketFC84A3A3": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "BucketName": "blog.example.com-logs",
        "LifecycleConfiguration": {
          "Rules": [
            {
              "ExpirationInDays": 10,
              "Status": "Enabled",
            },
          ],
        },
        "OwnershipControls": {
          "Rules": [
            {
              "ObjectOwnership": "ObjectWriter",
            },
          ],
        },
        "Tags": [
          {
            "Key": "aws-cdk:auto-delete-objects",
            "Value": "true",
          },
        ],
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Delete",
    },
    "blogSiteLogBucketPolicyBFCDB293": {
      "Properties": {
        "Bucket": {
          "Ref": "blogSiteLogBucketFC84A3A3",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:PutBucketPolicy",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::GetAtt": [
                    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
                    "Arn",
                  ],
                },
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "blogSiteLogBucketFC84A3A3",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "blogSiteLogBucketFC84A3A3",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "blogSiteSiteAlias659685FE": {
      "Properties": {
        "AliasTarget": {
          "DNSName": {
            "Fn::GetAtt": [
              "blogSiteDistributionF02D14DC",
              "DomainName",
            ],
          },
          "HostedZoneId": {
            "Fn::FindInMap": [
              "AWSCloudFrontPartitionHostedZoneIdMap",
              {
                "Ref": "AWS::Partition",
              },
              "zoneId",
            ],
          },
        },
        "HostedZoneId": "DUMMY",
        "Name": "blog.example.com.",
        "Type": "A",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "blogSitecloudfrontredirect7AA34D3A": {
      "DependsOn": [
        "blogSiteCloudfrontRedirectRole97D68716",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-us-east-1",
          "S3Key": "a0c2b77b3fb6bef295a42493077523b1f7c64946b1864fead8eb3a09ee366f56.zip",
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "blogSiteCloudfrontRedirectRole97D68716",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "blogSitecloudfrontredirectCurrentVersion30857C2B3f462d5bf3473516bc7a34a95cf6fa5f": {
      "Metadata": {
        "aws:cdk:do-not-refactor": true,
      },
      "Properties": {
        "FunctionName": {
          "Ref": "blogSitecloudfrontredirect7AA34D3A",
        },
      },
      "Type": "AWS::Lambda::Version",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`HugoSiteStack Snapshot Tests snapshot matches with custom githubRepo and branches 1`] = `
{
  "Mappings": {
    "AWSCloudFrontPartitionHostedZoneIdMap": {
      "aws": {
        "zoneId": "Z2FDTNDATAQYW2",
      },
      "aws-cn": {
        "zoneId": "Z3RFFRIM2A3IF5",
      },
    },
  },
  "Outputs": {
    "CloudFrontDistributionId": {
      "Description": "CloudFront distribution ID",
      "Export": {
        "Name": "TestBlog-CloudFrontDistributionId",
      },
      "Value": {
        "Ref": "blogSiteDistributionF02D14DC",
      },
    },
    "GitHubActionsRoleArn": {
      "Description": "IAM Role ARN for GitHub Actions to assume",
      "Export": {
        "Name": "TestBlog-GitHubActionsRoleArn",
      },
      "Value": {
        "Fn::GetAtt": [
          "blogGitHubRoleGitHubActionsDeployRoleCBD26A8C",
          "Arn",
        ],
      },
    },
    "S3BucketName": {
      "Description": "S3 bucket name for site content",
      "Export": {
        "Name": "TestBlog-S3BucketName",
      },
      "Value": {
        "Ref": "blogSiteBucket6627388D",
      },
    },
    "SiteUrl": {
      "Description": "Site URL",
      "Value": "https://blog.example.com",
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F": {
      "DependsOn": [
        "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-us-east-1",
          "S3Key": "faa95a81ae7d7373f3e1f242268f904eb748d8d0fdd306e8a6fe515a1905a7d6.zip",
        },
        "Description": {
          "Fn::Join": [
            "",
            [
              "Lambda function for auto-deleting objects in ",
              {
                "Ref": "blogSiteLogBucketFC84A3A3",
              },
              " S3 bucket.",
            ],
          ],
        },
        "Handler": "index.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "blogGitHubRoleGitHubActionsDeployRoleCBD26A8C": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRoleWithWebIdentity",
              "Condition": {
                "StringEquals": {
                  "token.actions.githubusercontent.com:aud": "sts.amazonaws.com",
                },
                "StringLike": {
                  "token.actions.githubusercontent.com:sub": "repo:testOrg/my-blog-repo:ref:refs/heads/main,repo:testOrg/my-blog-repo:ref:refs/heads/staging",
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Federated": "arn:aws:iam::123456789012:oidc-provider/token.actions.githubusercontent.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "Allows GitHub Actions in testOrg/my-blog-repo to deploy Hugo sites",
        "RoleName": "github-actions-my-blog-repo-deploy",
      },
      "Type": "AWS::IAM::Role",
    },
    "blogGitHubRoleGitHubActionsDeployRoleDefaultPolicyA113B7C2": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObject",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "blogSiteBucket6627388D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "blogSiteBucket6627388D",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "cloudfront:CreateInvalidation",
                "cloudfront:GetInvalidation",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:cloudfront::123456789012:distribution/",
                    {
                      "Ref": "blogSiteDistributionF02D14DC",
                    },
                  ],
                ],
              },
              "Sid": "AllowCloudFrontInvalidation",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "blogGitHubRoleGitHubActionsDeployRoleDefaultPolicyA113B7C2",
        "Roles": [
          {
            "Ref": "blogGitHubRoleGitHubActionsDeployRoleCBD26A8C",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "blogSiteBucket6627388D": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "AccessControl": "Private",
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "BucketName": "blog.example.com",
        "Tags": [
          {
            "Key": "aws-cdk:auto-delete-objects",
            "Value": "true",
          },
        ],
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Delete",
    },
    "blogSiteBucketAutoDeleteObjectsCustomResource849DD340": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "blogSiteBucketPolicy30243FB0",
      ],
      "Properties": {
        "BucketName": {
          "Ref": "blogSiteBucket6627388D",
        },
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F",
            "Arn",
          ],
        },
      },
      "Type": "Custom::S3AutoDeleteObjects",
      "UpdateReplacePolicy": "Delete",
    },
    "blogSiteBucketPolicy30243FB0": {
      "Properties": {
        "Bucket": {
          "Ref": "blogSiteBucket6627388D",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:PutBucketPolicy",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::GetAtt": [
                    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
                    "Arn",
                  ],
                },
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "blogSiteBucket6627388D",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "blogSiteBucket6627388D",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "s3:GetObject",
              "Condition": {
                "StringEquals": {
                  "AWS:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":cloudfront::",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":distribution/",
                        {
                          "Ref": "blogSiteDistributionF02D14DC",
                        },
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "cloudfront.amazonaws.com",
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "blogSiteBucket6627388D",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "blogSiteCertificate821A5B4B": {
      "Properties": {
        "DomainName": "blog.example.com",
        "DomainValidationOptions": [
          {
            "DomainName": "blog.example.com",
            "HostedZoneId": "DUMMY",
          },
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "TestBlog/blogSite/Certificate",
          },
        ],
        "ValidationMethod": "DNS",
      },
      "Type": "AWS::CertificateManager::Certificate",
    },
    "blogSiteCloudfrontRedirectRole97D68716": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "edgelambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "blogSiteDistributionF02D14DC": {
      "Properties": {
        "DistributionConfig": {
          "Aliases": [
            "blog.example.com",
          ],
          "CustomErrorResponses": [
            {
              "ErrorCode": 404,
              "ResponseCode": 200,
              "ResponsePagePath": "/404.html",
            },
          ],
          "DefaultCacheBehavior": {
            "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
            "Compress": true,
            "LambdaFunctionAssociations": [
              {
                "EventType": "origin-request",
                "LambdaFunctionARN": {
                  "Ref": "blogSitecloudfrontredirectCurrentVersion30857C2B3f462d5bf3473516bc7a34a95cf6fa5f",
                },
              },
            ],
            "TargetOriginId": "TestBlogblogSiteDistributionOrigin1DF526AB8",
            "ViewerProtocolPolicy": "allow-all",
          },
          "Enabled": true,
          "HttpVersion": "http2",
          "IPV6Enabled": true,
          "Logging": {
            "Bucket": {
              "Fn::GetAtt": [
                "blogSiteLogBucketFC84A3A3",
                "RegionalDomainName",
              ],
            },
          },
          "Origins": [
            {
              "DomainName": {
                "Fn::GetAtt": [
                  "blogSiteBucket6627388D",
                  "RegionalDomainName",
                ],
              },
              "Id": "TestBlogblogSiteDistributionOrigin1DF526AB8",
              "OriginAccessControlId": {
                "Fn::GetAtt": [
                  "blogSiteDistributionOrigin1S3OriginAccessControlBBF33E90",
                  "Id",
                ],
              },
              "S3OriginConfig": {
                "OriginAccessIdentity": "",
              },
            },
          ],
          "PriceClass": "PriceClass_100",
          "ViewerCertificate": {
            "AcmCertificateArn": {
              "Ref": "blogSiteCertificate821A5B4B",
            },
            "MinimumProtocolVersion": "TLSv1.2_2021",
            "SslSupportMethod": "sni-only",
          },
        },
      },
      "Type": "AWS::CloudFront::Distribution",
    },
    "blogSiteDistributionOrigin1S3OriginAccessControlBBF33E90": {
      "Properties": {
        "OriginAccessControlConfig": {
          "Name": "TestBlogblogSiteDistributionOrigin1S3OriginAccessControlAF40440E",
          "OriginAccessControlOriginType": "s3",
          "SigningBehavior": "always",
          "SigningProtocol": "sigv4",
        },
      },
      "Type": "AWS::CloudFront::OriginAccessControl",
    },
    "blogSiteLogBucketAutoDeleteObjectsCustomResource32867FB8": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "blogSiteLogBucketPolicyBFCDB293",
      ],
      "Properties": {
        "BucketName": {
          "Ref": "blogSiteLogBucketFC84A3A3",
        },
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F",
            "Arn",
          ],
        },
      },
      "Type": "Custom::S3AutoDeleteObjects",
      "UpdateReplacePolicy": "Delete",
    },
    "blogSiteLogBucketFC84A3A3": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "BucketName": "blog.example.com-logs",
        "LifecycleConfiguration": {
          "Rules": [
            {
              "ExpirationInDays": 10,
              "Status": "Enabled",
            },
          ],
        },
        "OwnershipControls": {
          "Rules": [
            {
              "ObjectOwnership": "ObjectWriter",
            },
          ],
        },
        "Tags": [
          {
            "Key": "aws-cdk:auto-delete-objects",
            "Value": "true",
          },
        ],
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Delete",
    },
    "blogSiteLogBucketPolicyBFCDB293": {
      "Properties": {
        "Bucket": {
          "Ref": "blogSiteLogBucketFC84A3A3",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:PutBucketPolicy",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::GetAtt": [
                    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
                    "Arn",
                  ],
                },
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "blogSiteLogBucketFC84A3A3",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "blogSiteLogBucketFC84A3A3",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "blogSiteSiteAlias659685FE": {
      "Properties": {
        "AliasTarget": {
          "DNSName": {
            "Fn::GetAtt": [
              "blogSiteDistributionF02D14DC",
              "DomainName",
            ],
          },
          "HostedZoneId": {
            "Fn::FindInMap": [
              "AWSCloudFrontPartitionHostedZoneIdMap",
              {
                "Ref": "AWS::Partition",
              },
              "zoneId",
            ],
          },
        },
        "HostedZoneId": "DUMMY",
        "Name": "blog.example.com.",
        "Type": "A",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "blogSitecloudfrontredirect7AA34D3A": {
      "DependsOn": [
        "blogSiteCloudfrontRedirectRole97D68716",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-us-east-1",
          "S3Key": "a0c2b77b3fb6bef295a42493077523b1f7c64946b1864fead8eb3a09ee366f56.zip",
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "blogSiteCloudfrontRedirectRole97D68716",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "blogSitecloudfrontredirectCurrentVersion30857C2B3f462d5bf3473516bc7a34a95cf6fa5f": {
      "Metadata": {
        "aws:cdk:do-not-refactor": true,
      },
      "Properties": {
        "FunctionName": {
          "Ref": "blogSitecloudfrontredirect7AA34D3A",
        },
      },
      "Type": "AWS::Lambda::Version",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
